# advent_of_code

./: Taskfile.yml
2023/Go/: go.mod
2023/go/: .gitignore  README.md  Taskfile.yml  flake.nix  main.go
2023/go/internal/day_01/: day_01.go  day_01_test.go
2023/go/internal/day_02/part_01/: part_01.go  part_01_test.go
2023/go/internal/day_02/part_02/: part_02.go  part_02_test.go
2023/go/internal/day_03/part_01/: part_01.go  part_01_test.go
2023/go/internal/day_04/part_01/: part_01.go  part_01_test.go
2023/go/internal/day_04/part_02/: part_02.go  part_02_test.go
2023/go/internal/day_06/part_01/: part_01.go  part_01_test.go
2024/OCaml/: AoC_2024.opam
2024/OCaml/lib/day_01/: part_02.ml
2024/OCaml/lib/day_04/: part_01.ml
2024/OCaml/lib/grid/: cell.mli  grid.ml  grid.mli
2024/OCaml/test/: day_04_part_01.ml  dune  grid.ml
2024/ocaml/: README.md  Taskfile.yml  dune-project  flake.nix
2024/ocaml/lib/: dune
2024/ocaml/lib/day_01/: part_01.ml
2024/ocaml/lib/day_02/: part_01.ml
2024/ocaml/lib/day_03/: part_01.ml
2024/ocaml/lib/day_05/: part_01.ml
2024/ocaml/lib/file/: read_input.ml
2024/ocaml/lib/grid/: cell.ml
2024/ocaml/test/: day_01_part_01.ml  day_01_part_02.ml  day_02_part_01.ml  day_03_part_01.ml  day_05_part_01.ml
2024/php/: README.md  flake.nix
2024/php/day_04/: Grid.php  Input.php  Position.php  part_01.php
2025/ocaml/: README.md  Taskfile.yaml  advent_of_code.opam  advent_of_code_2025.opam  dune-project
2025/ocaml/lib/: dune
2025/ocaml/lib/application/: d01p01.ml  d01p01.mli  d01p02.ml  d01p02.mli  d02p01.ml  d02p02.ml  d02p02.mli  d03p01.ml  d03p01.mli  d03p02.ml  d03p02.mli  d04p01.ml  d04p01.mli  d04p02.ml  d04p02.mli  d05p01.ml  d05p01.mli  d06p01.ml  d06p01.mli  d06p02.mli  day_1.ml  day_1.mli  dune  logger.ml  parser.ml
2025/ocaml/lib/domain/: d01p02.ml  d02p01.mli  d02p02.ml  d02p02.mli  d03p01.ml  d03p02.ml  day_1.ml  dune  matrix.ml  range.ml
2025/ocaml/lib/infrastructure/: dune  file.ml  file.mli  file_reader.ml  file_reader.mli  log.ml
2025/ocaml/lib/presentation/: cli.ml  dune
2025/ocaml/test/: dune
2025/ocaml/test/application/: dune  test_d01p01.ml  test_d01p02.ml  test_d04p01.ml
2025/ocaml/test/domain/: dune  test_d01p01.ml  test_d01p02.ml  test_d03p01.ml
(+4 files in other folders)
