(lang dune 3.20)

(name advent_of_code_2025)

(generate_opam_files true)

(source
 (github djoleary/advent_of_code))

(authors "DJ O'Leary <dijitol@proton.me>")

(maintainers "DJ O'Leary <dijitol@proton.me>")

(license Unlicense)

(documentation https://github.com/djoleary/advent_of_code/blob/main/2025/ocaml/docs/index.html)

(package
 (name advent_of_code_2025)
 (synopsis "Advent of Code 2025")
 (description "Solutions to the puzzles from Advent of Code 2025")
 (depends ocaml (alcotest :with-test))
 (tags
  ("Advent of Code 2025")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
