(lang dune 3.20)

(name advent_of_code)

(generate_opam_files true)

(source
 (github djoleary/advent_of_code))

(authors "DJ O'Leary <dijitol@proton.me>")

(maintainers "DJ O'Leary <dijitol@proton.me>")

(license Unlicense)

(documentation https://github.com/djoleary/advent_of_code/2025/ocaml/docs/index.html)

(package
 (name advent_of_code)
 (synopsis "advent of code solutions for 2025")
 (description "project aiming to solve the advent of code puzzles released for 2025")
 (depends
   (ocaml (>= 5.2))
   (ppx_deriving :build)
   (alcotest :with-test)
   (qcheck :with-test)
   (bisect_ppx :with-test)
   (ppx_inline_test :with-test)
   (ppx_expect :with-test)
   (odoc :with-doc)
   cmdliner
   fmt
   re2
 )
 (tags
  ("project template")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
